# activemq-cpp

./: .cdtproject  .gitignore  .project  KEYS  Makefile.am  Makefile.win  NOTICE.txt  README.txt  RELEASE_NOTES.txt  activemq-cpp.pc.in  activemqcpp-config.in  autogen.sh  build.sh  cms.pc.in  configure.ac  decaf-config.in  doxygen.cfg  makefile.cfg  pom.xml  readme.txt  sonar-project.properties  source.xml  vc2005-activemq-integration-tests.vcproj  vc2005-activemq-unittests.vcproj  vs2005-activemq-cpp.sln  vs2005-activemq-example.vcproj  vs2005-activemq.vcproj
activemq-c/: Makefile.am  README.txt  RELEASE_NOTES.txt  activemq-c.pc.in  activemqc-config.in  configure.ac  pom.xml
activemq-c/assembly/: source.xml
activemq-c/m4/: amqcpp_tools.m4  apr_tools.m4  find_activemqcpp.m4
activemq-c/src/examples/: Makefile.am  main.c
activemq-cpp/: ChangeLog.txt  KEYS  Makefile.am  NOTICE.txt  README.txt  RELEASE_NOTES.txt  activemq-cpp.pc.in  activemq-cpp.spec  activemqcpp-config.in  autogen.sh  build.conf  build.sh  configure.ac  doxygen.cfg  makefile  makefile-solaris-debug.cfg  makefile.cfg  pom.xml  readme.txt  vc2005-activemq-integration-tests.vcproj  vc2005-activemq-unittests.vcproj  vs2005-activemq-cpp.sln  vs2005-activemq-example.vcproj  vs2005-activemq.vcproj
activemq-cpp/activemq-cpp.xcodeproj/: project.pbxproj
activemq-cpp/assembly/: source.xml
activemq-cpp/m4/: ac_amqcpp_common.m4  ac_doxygen.m4  apr_tools.m4  check_addrinfo.m4  check_atomics.m4  check_pthreads.m4  find_cppunit.m4  find_openssl.m4
activemq-cpp/old-makefiles/: makefile  makefile-linux-release.cfg  makefile-windows-debug.cfg  makefile-windows-release.cfg  makefile.cfg
activemq-cpp/openwire-scripts/: AmqCppClassesGenerator.java  AmqCppGeneratorTask.java  AmqCppHeadersGenerator.java  AmqCppMarshallingClassesGenerator.java  AmqCppMarshallingHeadersGenerator.java  AmqCppTestMarshallingClassesGenerator.java  AmqCppTestMarshallingHeadersGenerator.java
activemq-cpp/solaris/: makefile-solaris-release.cfg
activemq-cpp/src/examples/: Makefile.am  main.cpp
activemq-cpp/src/main/: Makefile.am  Makefile.maven
activemq-cpp/src/test/: Makefile.am  Makefile.maven  main.cpp  testRegistry.cpp
activemq-cpp/src/test-benchmarks/: Makefile  Makefile.am  Makefile.maven  main.cpp  testRegistry.cpp
activemq-cpp/src/test-integration/: Makefile  Makefile.am  TestRegistry.cpp  Tester.cpp  main.cpp
activemq-cpp/temp-scripts/: AmqCppMarshallingClassesGenerator.java  AmqCppMarshallingHeadersGenerator.java
activemq-cpp/unix/: pom.xml
activemq-cpp/vs2005-build/: vc2005-activemq-producer.vcproj  vs2005-activemq-cpp.sln  vs2005-activemq-example.vcproj  vs2005-activemq-integration-tests.vcproj  vs2005-activemq-unittests.vcproj  vs2005-activemq.vcproj
activemq-cpp/vs2008-build/: activemq-cmstemplate-receiver.vcproj  activemq-cmstemplate-sender.vcproj  activemq-cpp-example.vcproj  activemq-cpp-integration-tests.vcproj  activemq-cpp-producer.vcproj  activemq-cpp-unittests.vcproj  activemq-cpp.sln  activemq-cpp.vcproj
activemq-cpp/vs2010-build/: activemq-cpp-example.vcxproj  activemq-cpp-integration-tests.vcxproj  activemq-cpp-integration-tests.vcxproj.filters  activemq-cpp-unit-tests.vcxproj  activemq-cpp-unit-tests.vcxproj.filters  activemq-cpp.sln  activemq-cpp.vcxproj  activemq-cpp.vcxproj.filters
activemq-cpp/win32-gcc/: pom.xml
activemq-cpp/win32-msvc/: pom.xml
src/decaf/: Makefile.am  NOTICE.txt  README.txt  RELEASE_NOTES.txt  configure.ac  decaf.pc.in
src/decaf/io/: BlockingByteArrayInputStream.h  BufferedInputStream.h  ByteArrayInputStream.cpp  ByteArrayOutputStream.cpp  DataOutputStream.cpp  EOFException.h  FilterInputStream.h  FilterOutputStream.h  IOException.h
src/decaf/lang/: Exception.cpp  Exception.h  Runnable.h
src/decaf/m4/: apr_tools.m4  find_apr.m4
src/decaf/net/: ServerSocket.cpp  SocketInputStream.h  TcpSocket.h
src/decaf/util/: Config.h  Date.cpp
src/decaf/vs2005-build/: vs2005-decaf-example.vcproj  vs2005-decaf-unittests.vcproj  vs2005-decaf.sln  vs2005-decaf.vcproj
src/examples/: Makefile.am  main.cpp
src/examples/advisories/: AdvisoryConsumer.cpp  AdvisoryConsumer.h  AdvisoryProducer.h  AdvisoryProducerMain.cpp  TempDestinationAdvisoryConsumer.cpp  TempDestinationAdvisoryConsumer.h
src/examples/cmstemplate/: CMSTemplateSender.cpp
src/examples/cmstemplate-stress/: ConnectionFactoryMgr.cpp  ConnectionFactoryMgr.h  MessagingTask.cpp  MessagingTask.h  Receiver.cpp  Receiver.h  Sender.h  TestSenderAndReceiver.cpp  TestSenderAndReceiver.h
src/examples/consumers/: SimpleAsyncConsumer.cpp
src/examples/producers/: SimpleProducer.cpp
src/main/: Makefile.am  Makefile.maven
src/main/cms/: AsyncCallback.cpp  BytesMessage.cpp  BytesMessage.h  CMSException.cpp  CMSException.h  CMSProperties.cpp  CMSProperties.h  CMSSecurityException.cpp  CMSSecurityException.h  Closeable.h  Config.h  Connection.h  ConnectionFactory.cpp  ConnectionFactory.h  ConnectionMetaData.cpp  ConnectionMetaData.h  DeliveryMode.h  Destination.cpp  Destination.h  ExceptionListener.h  IllegalStateException.cpp  IllegalStateException.h  InvalidClientIdException.cpp  InvalidClientIdException.h  InvalidDestinationException.cpp  InvalidSelectorException.h  MapMessage.h  Message.cpp  Message.h  MessageConsumer.h  MessageEOFException.cpp  MessageEOFException.h  MessageEnumeration.cpp  MessageEnumeration.h  MessageFormatException.cpp  MessageFormatException.h  MessageListener.h  MessageNotReadableException.cpp  MessageNotReadableException.h  MessageNotWriteableException.cpp  (+30 more)
src/test/: Makefile.am  Makefile.maven  main.cpp  testRegistry.cpp
src/test-integration/: Makefile.am  Makefile.maven  TestRegistry.cpp  main.cpp
src/test-integration/.deps/: activemq_test_integration-AsyncSender.Po  activemq_test_integration-DurableTester.Po  activemq_test_integration-IntegrationCommon.Po  activemq_test_integration-SimpleRollbackTest.Po  activemq_test_integration-SimpleTester.Po  activemq_test_integration-TransactionTester.Po  activemq_test_integration-main.Po
src/test-integration/integration/: IntegrationCommon.cpp  (+4 more)
(+7451 files in other folders)
